--- a/HOTEL_MANAGEMENT/HOTEL_MANAGEMENT/Content/StyleIndexHotel.css
+++ b/HOTEL_MANAGEMENT/HOTEL_MANAGEMENT/Content/StyleIndexHotel.css
@@ -183,3 +183,11 @@ body {
     border-radius: 50%;
     color: white;
 }
+.btnn {
+    background: #45465F; 
+    color: #fff;
+}
+.btnn:hover{
+    background: #fff;
+    transition: all 0.02s ease-in-out
+}
