--- a/HOTEL_MANAGEMENT/HOTEL_MANAGEMENT/Views/Reservations/Create.cshtml
+++ b/HOTEL_MANAGEMENT/HOTEL_MANAGEMENT/Views/Reservations/Create.cshtml
@@ -1,79 +1,76 @@
 ﻿@model HOTEL_MANAGEMENT.Models.Reservation
 
+
+
 @{
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+
+<h3 class="text-center text-uppercase" style="color: #1781A6;"><b>please add your reservation</b></h3>
+
+<div style="padding: 6%;">
+    <h5 class="text-center text-uppercase text-danger"><b>@ViewBag.ErrorReservation</b></h5>
+    <table align="center">
+
+        <tr>
+            @using (Html.BeginForm("Create", "Reservations", FormMethod.Post, new { enctype = "multipart/form-data" }))
+            {
+                @Html.AntiForgeryToken()
+                <td>
+                    <div align="center" class="form-group">
+                        <hr />
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Date_Begin, htmlAttributes: new { @class = "control-label" })
+                            <div>
+                                @Html.EditorFor(model => model.Date_Begin, new { htmlAttributes = new { type = "date", @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.Date_Begin, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
 
 
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Reservation</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Date_Begin, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Date_Begin, new { htmlAttributes = new { type="date", @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Date_Begin, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Date_End, htmlAttributes: new { @class = "control-label" })
+                            <div>
+                                @Html.EditorFor(model => model.Date_End, new { htmlAttributes = new { type = "date", @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.Date_End, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Date_End, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Date_End, new { htmlAttributes = new { type = "date", @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Date_End, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                        <div class="form-group">
+                            <div class="col-md-offset-2 col-md-12">
+                                <input style="margin-left: -70px;" type="submit" value="Save" class="button" />
+                            </div>
+                        </div>
+                    </div>
 
-        @*<div class="form-group">
-            @Html.LabelFor(model => model.Date_Reservation, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Date_Reservation, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Date_Reservation, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
+                </td>
+                <td><div>&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;</div></td>
+                <td><div> <img src="~/Images/CreateReservation.png" width="300" height="300" /></div></td>
+            }
+        </tr>
+    </table>
 
-        @*<div class="form-group">
-            @Html.LabelFor(model => model.Bill, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Bill, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Bill, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
-
-        @*<div class="form-group">
-            @Html.LabelFor(model => model.Id_user, "Id_user", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("Id_user", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Id_user, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
-
-        @*<div class="form-group">
-            @Html.LabelFor(model => model.Id_Room, "Id_Room", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("Id_Room", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Id_Room, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
-}
-
-<div>
     @Html.ActionLink("Back to List", "Index")
 </div>
+<style>
+    .button {
+        background-color: #1781A6;
+        border: none;
+        border-radius: 10px;
+        color: white;
+        padding: 6px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+    }
+</style>
+
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
