--- a/HOTEL_MANAGEMENT/HOTEL_MANAGEMENT/Views/Reservations/Edit.cshtml
+++ b/HOTEL_MANAGEMENT/HOTEL_MANAGEMENT/Views/Reservations/Edit.cshtml
@@ -1,81 +1,85 @@
 ﻿@model HOTEL_MANAGEMENT.Models.Reservation
 
+
+
 @{
     ViewBag.Title = "Edit";
 }
+<h3 class="text-center text-uppercase text-danger"><b>@ViewBag.ErrorReservation</b></h3>
+<table align="center">
+    <tr>
+        @using (Html.BeginForm("Edit", "Reservations", FormMethod.Post, new { enctype = "multipart/form-data" }))
+        {
+            @Html.AntiForgeryToken()
+            @Html.HiddenFor(model => model.Id_Reservation)
+            @Html.HiddenFor(model => model.Id_Room)
+            @Html.HiddenFor(model => model.Date_Reservation)
+            @Html.HiddenFor(model => model.Id_user)
+            @Html.HiddenFor(model => model.Bill)
+            <td>
+                <div class="form-horizontal">
+                    <h4>Edit Reservation</h4>
+                    <hr />
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    @Html.HiddenFor(model => model.Id_Reservation)
 
-<h2>Edit</h2>
 
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Reservation</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Id_Reservation)
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Date_Begin, htmlAttributes: new { @class = "control-label" })
+                        <div>
+                            @Html.EditorFor(model => model.Date_Begin, new { htmlAttributes = new { type = "date", @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Date_Begin, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Date_Begin, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Date_Begin, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Date_Begin, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Date_End, htmlAttributes: new { @class = "control-labe" })
+                        <div>
+                            @Html.EditorFor(model => model.Date_End, new { htmlAttributes = new { type = "date", @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Date_End, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Date_End, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Date_End, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Date_End, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Date_Reservation, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Date_Reservation, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Date_Reservation, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Bill, htmlAttributes: new { @class = "control-label" })
+                        <div>
+                            @Html.EditorFor(model => model.Bill, new { htmlAttributes = new { @disabled = "disabled", @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Bill, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Bill, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Bill, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Bill, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Id_user, "Id_user", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("Id_user", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Id_user, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <input type="submit" value="Save" class="button" />
+                        </div>
+                    </div>
+                </div>
+            </td>
+            <td><div>&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;</div></td>
+            <td><div> <img src="~/Images/CreateReservation.png" width="300" height="300" /></div></td>
+        }
+    </tr>
+</table>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Id_Room, "Id_Room", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("Id_Room", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Id_Room, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+@Html.ActionLink("Back to List", "Index")
+<style>
+    .button {
+        background-color: #1781A6;
+        border: none;
+        border-radius: 10px;
+        color: white;
+        padding: 6px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+    }
+</style>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
