--- a/HOTEL_MANAGEMENT/HOTEL_MANAGEMENT/Views/Rooms/Create.cshtml
+++ b/HOTEL_MANAGEMENT/HOTEL_MANAGEMENT/Views/Rooms/Create.cshtml
@@ -57,7 +57,7 @@
                         <div class="center">
                             <div class="form-input" id="form-input">
                                 <label for="file-ip-1">Upload Image</label>
-                                <input type="file" id="file-ip-1" accept="image/*" name="Image_Room" onchange="showPreview(event);">
+                                <input type="file" required id="file-ip-1" accept="image/*" name="Image_Room" onchange="showPreview(event);">
                                 <div class="preview">
                                     <img style="height: 300px;" id="file-ip-1-preview" src="">
                                 </div>
