--- a/HOTEL_MANAGEMENT/HOTEL_MANAGEMENT/Views/Shared/_Layout.cshtml
+++ b/HOTEL_MANAGEMENT/HOTEL_MANAGEMENT/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
-    @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/css?v5")
     @Scripts.Render("~/bundles/modernizr")
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 </head>
@@ -17,18 +17,18 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("HOTEL MANAGEMENT", "Index", "Hotels", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Hotels")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    @*<li>@Html.ActionLink("About", "About", "Home")</li>*@
+                    @*<li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
                     @if (Session["Id_user"] != null)
                     {
                         <li>@Html.ActionLink("Reservations", "Index", "Reservations")</li>
                     }
-                    @if (Session["Id_user"] != null && Session["Roles"].ToString().ToLower() == "true")
+                    @if (Session["Id_user"] != null && Session["Roles"]!= null && Session["Roles"].ToString().ToLower() == "true")
                     {
                         <li>@Html.ActionLink("Users", "Index", "Users")</li>
                     }
@@ -51,9 +51,14 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
+        <footer class="text-center">
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p> This project is build by</p>
+            <p>Anas AKZAZ | Oussama BOUNNASSEH | Younes SEFIANI | Yahya HAMDI</p>
         </footer>
+    </div>
+    <div class="navbar navbar-inverse navbar-toggle">
+
     </div>
 
     @Scripts.Render("~/bundles/jquery")
