--- a/HOTEL_MANAGEMENT/HOTEL_MANAGEMENT/Views/Shared/_Layout.cshtml
+++ b/HOTEL_MANAGEMENT/HOTEL_MANAGEMENT/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
         <hr />
         <footer class="text-center">
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-            <p> This project is build by</p>
+            <p> This project is built by</p>
             <p>Anas AKZAZ | Oussama BOUNNASSEH | Younes SEFIANI | Yahya HAMDI</p>
         </footer>
     </div>
