--- a/HOTEL_MANAGEMENT/HOTEL_MANAGEMENT/Views/Users/Details.cshtml
+++ b/HOTEL_MANAGEMENT/HOTEL_MANAGEMENT/Views/Users/Details.cshtml
@@ -2,7 +2,7 @@
 @model dynamic
 @{ ViewBag.Title = "Details"; }
 
-<h2 style="color: #1781A6; text-align:center; padding:4%">Details</h2>
+<h2 style="color: #1781A6; text-align:center; padding:4%"><b>Profil</b></h2>
 <link href="~/Content/StyleDetailsUser.css" rel="stylesheet" type="text/css" media="screen" runat="server" />
 
 <div class="page-content page-container" id="page-content" style="padding:6% 0 6% 0">
