--- a/HOTEL_MANAGEMENT/HOTEL_MANAGEMENT/Views/Shared/_Layout.cshtml
+++ b/HOTEL_MANAGEMENT/HOTEL_MANAGEMENT/Views/Shared/_Layout.cshtml
@@ -54,7 +54,7 @@
         <footer class="text-center">
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
             <p> This project is built by</p>
-            <p>Anas AKZAZ | Oussama BOUNNASSEH | Younes SEFIANI | Yahya HAMDI</p>
+            <p>Anas AKZAZ</p>
         </footer>
     </div>
     <div class="navbar navbar-inverse navbar-toggle">
